# langgraph-toolbox

./: .env.example  .gitignore  LICENSE  README.md  claude.md  langgraph.json  pyproject.toml  pytest.ini
.claude/: settings.json
.claude/scripts/: notify.py  run-notify.cmd  run-notify.sh
.specify/scripts/bash/: check-prerequisites.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
docs/architecture/: design-philosophy.md
docs/standards/: HOW-TO-CREATE-AGENT.md  prebuilt-agent-standard.md
src/langgraph_toolbox/: __init__.py  example_agent.py
src/langgraph_toolbox/agents/prebuilt/: README.md
src/langgraph_toolbox/core/: README.md  __init__.py  patterns.py  registry.py  state_base.py  tracing.py
src/langgraph_toolbox/lib/: __init__.py
src/langgraph_toolbox/lib/nodes/: README.md  __init__.py  research_nodes.py
src/langgraph_toolbox/lib/services/: README.md  __init__.py  file_system_service.py  search_service.py
src/langgraph_toolbox/subgraphs/: README.md
templates/prebuilt_agent_template/: README.md  __init__.py  agent.py
tests/: __init__.py
